--- a/Css/article.css
+++ b/Css/article.css
@@ -1,424 +1,318 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-body{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: #fff;
-    color: #000;
-    font-size: 15px;
-    line-height: 1.5;
+body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background: #fff;
+  color: #000;
+  font-size: 15px;
+  line-height: 1.5;
+}
 
-}
-a{
-    color: #262626;
-    text-decoration:none;
-}
-ul{
-list-style: none;
-}  
-
-.container{
-    width: 90%;
-   max-width: 1100px;
-    margin: auto;
+.container {
+  width: 90%;
+  max-width: 1100px;
+  margin: auto;
 }
 /*Nav*/
-.main-nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 60px;
-    padding:20px 0;
-    font-size: 13px;
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
 }
-.main-nav .logo{
-    width: 60px;
+.topnav .logo {
+  width: 60px;
+  height: 30px;
 }
-.main-nav ul{
-    display: flex;
-}
-.main-nav ul li{
-    padding: 0 10px;
-}
-.main-nav ul li a{
-    padding-bottom: 2px; 
-}
-.main-nav ul li a:hover{
-    border-bottom: 2px solid #262626;
-    
-}
-.main-nav ul.main-menu{
-    flex:1;
-    margin-left: 20px;   
-}
-.menu-btn{
-    cursor: pointer;
-    position: absolute;
-    top: 20px;
-    right: 30px;
-    z-index: 2;
-    display: none;
-}
-.btn{
-    cursor: pointer;
-    display: inline-block;
-    border: 0;
-    font-weight: bold;
-    padding: 10px 20px;
-    background: #1f1111;
-    color: #000;
-    font-size: 15px;
-}
-.btn:hover{
-    opacity: 0.9;
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-input[type=name],textarea{
-    width: 300px;
-    margin: 15px;
-    padding: 18px;
-    background: #fff;
-    border: none;
-    border-bottom: 1px solid gray;
-    color: black;
-    font-family: 'Times New Roman', Times, serif;
-  }
-  
-  
-  input{
-    height: 25px;
-  }
-  input[type=submit]{
-    width: 300px;
-    border: none;
-    background-color: rgb(25, 26, 25);
-    color:white;
-    height: 25px;
-    margin-top: 15px;
-    font-weight: bold;
-  
-    
-  }
-  input[type=submit]:hover{
-     cursor: pointer;
-     background-color:#fff;
-     color:rgb(15, 15, 15);
-  }
-textarea{
-    margin-top: 20px;
-    padding: 18px;
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
-button{
-    background: #000000;
+.topnav a.active {
+  background-color: #4caf50;
+  color: white;
 }
-.article h3{
 
-    margin-bottom: 20px;
-    color: #000;
-    justify-content: flex-start;
-    margin-top: 20px;
-  
+.topnav .icon {
+  display: none;
 }
-.article p{
+.topnav .logo {
+  width: 60px;
+  height: 30px;
+}
+
+input[type="name"],
+textarea {
+  width: 300px;
+  margin: 15px;
+  padding: 18px;
+  background: #fff;
+  border: none;
+  border-bottom: 1px solid gray;
+  color: black;
+  font-family: "Times New Roman", Times, serif;
+}
+
+input {
+  height: 25px;
+}
+input[type="submit"] {
+  width: 300px;
+  border: none;
+  background-color: rgb(25, 26, 25);
+  color: white;
+  height: 25px;
+  margin-top: 15px;
+  font-weight: bold;
+}
+input[type="submit"]:hover {
+  cursor: pointer;
+  background-color: #fff;
+  color: rgb(15, 15, 15);
+}
+textarea {
+  margin-top: 20px;
+  padding: 18px;
+}
+
+button {
+  background: #000000;
+}
+.article h3 {
+  margin-bottom: 20px;
+  color: #000;
+  justify-content: flex-start;
+  margin-top: 20px;
+}
+.article p {
   margin-top: 30px;
-    justify-content: flex-start;
-    line-height: 1.5em;
-    font-size: 25px;
-    padding: 18px;
-    margin-bottom: 30px;
+  justify-content: flex-start;
+  line-height: 1.5em;
+  font-size: 25px;
+  padding: 18px;
+  margin-bottom: 30px;
 }
-.read-article img{
-   
-    width: 700px;
-    height: 300px;
-
-
+.read-article img {
+  width: 700px;
+  height: 300px;
 }
 footer {
-    background-color: #333333;
-    padding: 20px;
-    margin-top: 20px;
+  background-color: #333333;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.rog .descr ol li a {
+  text-decoration: none;
+}
+
+.skills {
+  width: 500px;
+  margin: 50px auto 0;
+  padding: 20px;
+}
+
+.rog .lang {
+  margin-top: 50px;
+}
+
+.rog .descr {
+  margin-top: 30px;
+}
+
+#Contact .icons ul li {
+  display: inline;
+  text-align: center;
+  padding: 10px;
+}
+
+.icons {
+  text-align: center;
+  margin: 10px 0;
+}
+
+.fas {
+  color: white;
+}
+
+.fas:hover {
+  color: #bf4080;
+}
+
+.fab {
+  color: white;
+}
+
+.fab:hover {
+  color: #bf4080;
+}
+
+.Copyright {
+  text-align: center;
+  color: white;
+  border-top: #595959 solid 1px;
+}
+
+.comment-section {
+  width: 100%;
+  min-height: 100vh;
+  background: #fff;
+  background-size: cover;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+}
+.contact-info {
+  color: #000000;
+  max-width: 500px;
+  line-height: 65px;
+  padding-left: 50px;
+  font-size: 18px;
+}
+.contact-info i {
+  margin-right: 20px;
+  font-size: 25px;
+}
+.comment-form {
+  max-width: 700px;
+  margin-right: 50px;
+}
+.contact-info .comment-form {
+  flex: 1;
+}
+.comment-form h2 {
+  color: #000;
+  text-align: center;
+  font-size: 35px;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+.comment-form .text-box {
+  background: rgb(248, 246, 246);
+  color: #000;
+  border: none;
+  width: calc(50%-10px);
+  height: 50px;
+  padding: 12px;
+  font-size: 15px;
+  border-radius: 5px;
+  box-shadow: 0 1px 1px rgba(250, 247, 247, 0.1);
+  margin-bottom: 20px;
+  opacity: 0.9;
+}
+.comment-form .text-box:first-child {
+  margin-right: 15px;
+}
+.comment-form textarea {
+  background: rgb(248, 246, 246);
+  color: #000;
+  border: none;
+  width: 100%;
+  padding: 12px;
+  font-size: 15px;
+  min-height: 200px;
+  max-height: 400px;
+  resize: vertical;
+  border-radius: 5px;
+  box-shadow: 0 1px 1px rgba(250, 248, 248, 0.1);
+  margin-bottom: 20px;
+  opacity: 0.9;
+}
+.comment-form.send-btn {
+  float: right;
+  background: #f9f9fa;
+  color: #000;
+  border: none;
+  width: 120px;
+  height: 40px;
+  font-size: 15px;
+  font-weight: 600;
+  letter-spacing: 2px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  transition-property: background;
+}
+.comment-form.send-btn:hover {
+  background: #0582e3;
+}
+.indivudual-comments {
+  padding: 12px;
+}
+
+.logout {
+  color: red;
+  cursor: pointer;
+  padding: 10px;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
+    display: none;
   }
-  
-  .rog .descr ol li a {
-    text-decoration: none;
+  .topnav a.icon {
+    float: right;
+    display: block;
   }
-  
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+@media (max-width: 768px) {
   .skills {
-    width: 500px;
-    margin: 50px auto 0;
-    padding: 20px;
-  }
-  
-  .rog .lang {
-    margin-top: 50px;
-  }
-  
-  .rog .descr {
-    margin-top: 30px;
-  }
-  
-  #Contact .icons ul li {
-    display: inline;
-    text-align: center;
-    padding: 10px;
-  }
-  
-  .icons {
-    text-align: center;
-    margin: 10px 0;
-  }
-  
-  .fas {
-    color: white;
-  }
-  
-  .fas:hover {
-    color: #bf4080;
-  }
-  
-  .fab {
-    color: white;
-  }
-  
-  .fab:hover {
-    color: #bf4080;
-  }
-  
-  .Copyright {
-    text-align: center;
-    color: white;
-    border-top: #595959 solid 1px;
+    grid-template-columns: repeat(2, 1fr);
   }
 
-.comment-section{
-    width: 100%;
- min-height: 100vh;
- background: #fff;
- background-size: cover;
- display: flex;
- justify-items: center;
- align-items: center;
-}
-.contact-info{
-    color: #000000;
-    max-width: 500px;
-    line-height: 65px;
-    padding-left: 50px;
-    font-size: 18px;
-}
-.contact-info i{
-    margin-right: 20px;
-    font-size: 25px;
-}
-.comment-form{
-max-width: 700px;
-margin-right: 50px;
-}
-.contact-info .comment-form{
-    flex: 1;
-}
-.comment-form h2{
-    color: #000;
-    text-align: center;
-    font-size: 35px;
-    text-transform: uppercase;
-    margin-bottom: 30px;
-}
-.comment-form .text-box{
-    background: rgb(248, 246, 246);
-    color: #000;
-    border: none;
-    width: calc(50%-10px);
-    height: 50px;
-    padding: 12px;
-    font-size: 15px;
-    border-radius: 5px;
-    box-shadow: 0 1px 1px rgba(250, 247, 247, 0.1);
+  .xbox .content p {
+    display: none;
+  }
+
+  .xbox .content h2 {
     margin-bottom: 20px;
-    opacity: 0.9;
-}
-.comment-form .text-box:first-child{
-    margin-right: 15px;
-}
-.comment-form textarea{
-    background: rgb(248, 246, 246);
-    color: #000;
-    border: none;
-    width: 100%;
-    padding: 12px;
-    font-size: 15px;
-    min-height: 200px;
-    max-height: 400px;
-    resize: vertical;
-    border-radius: 5px;
-    box-shadow: 0 1px 1px rgba(250, 248, 248, 0.1);
-    margin-bottom: 20px;
-    opacity: 0.9;
-}
-.comment-form.send-btn{
-    float:right;
-    background: #f9f9fa;
-    color: #000;
-    border: none;
-    width: 120px;
-    height: 40px;
-    font-size: 15px;
-    font-weight: 600;
-    letter-spacing: 2px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 0.3s;
-    transition-property: background;
-}
-.comment-form.send-btn:hover{
-    background: #0582e3;
-}
-.indivudual-comments{
-    padding: 12px;
+  }
 
+  .carbon .content {
+    width: 85%;
+  }
 
-}
-
-
-
-
-/* Links*/
-.links{
-    background: #f2f2f2;
-    color: #616161;
-    font-size: 12px;
-    padding: 35px 0;
-}
-.links-inner{
-    max-width: 1100px;
-    margin: 0 auto;
-    padding: 0 20px;
-    display: grid;
-    grid-template-columns: repeat(6,1fr);
-    grid-gap :10px;
-    align-items: flex-start ;
-    justify-content: center;
-}
-.links li{
-    line-height: 2.8;
-}
-/* Footer*/
-
-@media(max-width: 700px){
-    .menu-btn{
-        display: block;
-    }
-    .menu-btn:hover{
-        opacity: 0.5;
-    }
-    .main-nav ul.right-menu{
-        margin-right: 50px;
-    }
-    .main-nav ul.main-menu{
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        background: #f2f2f2;
-        width: 50%;
-        height: 100%;
-        border-right:#ccc 1px solid ;
-        opacity: 0.9;
-        padding: 30px;
-        transform: translateX(-500px);
-      transition: transform 0.5s ease-in-out;
-
-    }
-    .main-nav ul.main-menu li{
-        padding: 10px;
-        border-bottom: #ccc solid 1px;
-        font-size: 14px;
-    }
-    .main-nav ul.main-menu li:last-child{
-border-bottom: 0;
-    }
-    
-    .main-nav ul.main-menu.show{
-        transform: translateX(-20px);
-    }
-    .skills .Projects{
-        grid-template-columns: repeat(2,1fr);
-        width: 100%;
-    }
-    .xbox .content p {
-        display: none;
-    }
-    .xbox .content h2{
-        margin-bottom: 20px;
-    }
-    .carbon .content{
-        width: 85%;
-    }
-    .links .links-inner{
-        grid-template-columns: repeat(2,1fr);
-    }
-}
-@media(max-width:500px){
-    .skills .Projects{
-        width: 100%;
-        grid-template-columns: 1fr;
-    
-    }
-    .links .links-inner{
-        grid-template-columns: 1fr;
-    }
-    .links .links-inner ul{
-        margin-bottom: 20px;
-    }
-}
-@media screen and (max-width:950px){
-    .comment-section{
-        flex-direction: column;
-    }
-    .contact-info, .comment-form{
-        margin: 30px 50px;
-    }
-    .comment-form h2{
-font-size: 30px;
-    }
-    .comment-form .text-box{
-        width: 100%;
-    }
-}
-.alert-success{
-    z-index: 1;
-    background: #d4edd1;
-    font-size: 18px;
-    padding: 20px 40px;
-    min-width: 420px;
-    position: fixed;
-    right: 0;
-    top: 10px;
-    border-left: 8px solid #3ad66e;
- border-radius: 4px ;
-}
-.alert-error{
-    z-index: 1;
-    background: #fff3cd;
-    font-size: 18px;
-    padding: 20px 40px;
-    min-width: 420px;
-    position: fixed;
-    right: 0;
-    top: 10px;
-    border-left: 8px solid #ffa502;
- border-radius: 4px ;
+  .links .links-inner {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 /*responsive */
-@media(max-width:800px){
-    .left-column, .right-column{
-        width: 100%;
-        padding: 0px;
-    }
+@media (max-width: 800px) {
+  .left-column,
+  .right-column {
+    width: 100%;
+    padding: 0px;
+  }
 }
