--- a/Css/blog.css
+++ b/Css/blog.css
@@ -7,105 +7,103 @@
 }
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background: #fff;
+  background: rgb(148, 125, 125);
   color: #000;
   font-size: 15px;
   line-height: 1.5;
 }
-a {
-  color: #262626;
-  text-decoration: none;
-}
-ul {
-  list-style: none;
-}
-
 .container {
-  width: 110%;
-  max-width: 1100px;
-  margin: auto;
-}
-/*Nav*/
-.main-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 60px;
-  padding: 20px 0;
-  font-size: 13px;
-}
-.main-nav img {
-  width: 80px;
-  height: 40px;
-}
-.main-nav ul {
-  display: flex;
-}
-.main-nav ul li {
-  padding: 0 10px;
-}
-.main-nav ul li a {
-  padding-bottom: 2px;
-}
-.main-nav ul li a:hover {
-  border-bottom: 2px solid #262626;
-}
-.main-nav ul.main-menu {
-  flex: 1;
-  margin-left: 20px;
-}
-.menu-btn {
-  cursor: pointer;
-  position: absolute;
-  top: 20px;
-  right: 30px;
-  z-index: 2;
-  display: none;
-}
-.btn {
-  cursor: pointer;
-  display: inline-block;
-  border: 0;
-  font-weight: bold;
-  padding: 10px 20px;
-  background: #262626;
-  color: #fff;
-  font-size: 15px;
-}
-.btn:hover {
-  opacity: 0.9;
-}
-h1 {
-  display: grid;
-  flex-direction: column;
-  align-content: center;
-  width: 250px;
-  background: #333;
-  color: #fff;
+  width: 80%;
   margin: 0 auto;
 }
+.topnav {
+  overflow: hidden;
+  /* background-color: #333; */
+}
+/* .logo {
+  width: 60px;
+  height: 30px;
+} */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4caf50;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+.topnav .logo {
+  width: 60px;
+  height: 30px;
+}
+/* Showcae*/
+.showcase {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: flex-end;
+  padding-bottom: 50px;
+  margin-bottom: 30px;
+}
+.showcase h2,
+.showcase p {
+  margin-bottom: 10px;
+  color: #000;
+}
+.showcase img {
+  width: 300px;
+  border-radius: 50%;
+}
+.showcase .btn {
+  margin-top: 20px;
+}
+.dark {
+  color: #fff;
+}
+.dark.btn {
+  background: #f4f4f4;
+  color: #333;
+}
 .articles {
-  margin-right: 20px;
+  /* margin-right: 20px; */
 }
 .articleImg {
   display: flex;
   flex-direction: column;
-  
 }
 .personalArticles {
-  margin-top: 20px;
+  margin-bottom: 20px;
   color: black;
   display: flex;
   border: 1px solid black;
-  padding: 20px;
+  /*padding: 20px;*/
   font-size: 25px;
-  width: 95%;
-  margin-right: 50px;
+  /* width: %; */
+  /* margin-right: 30px;
+  margin-left: 30px; */
 }
 .personalArticles img {
-  align-self: flex-start;
-  height: 100px;
-  width: 200px;
+  /*align-self: flex-start;*/
+  height: 100%;
+  width: 25%;
+  /* margin-left: 50px; */
 }
 a {
   text-decoration: none;
@@ -113,13 +111,15 @@ a {
 span {
   margin: 7px;
 }
+.modify {
+  display: flex;
+  flex-direction: column;
+  margin-right: 5px;
+}
 footer {
   background-color: #333333;
   padding: 20px;
   margin-top: 20px;
-  position: absolute;
-  bottom: 0px;
-  width: 100%;
 }
 
 .rog .descr ol li a {
@@ -134,9 +134,6 @@ footer {
   margin-top: 30px;
 }
 
-img {
-  width: 150px;
-}
 #Contact .icons ul li {
   display: inline;
   text-align: center;
@@ -169,57 +166,82 @@ img {
   color: white;
   border-top: #595959 solid 1px;
 }
-@media (max-width: 700px) {
-  .menu-btn {
-    display: block;
-  }
-  .menu-btn:hover {
-    opacity: 0.5;
-  }
-  .main-nav ul.right-menu {
-    margin-right: 50px;
-  }
-  .main-nav ul.main-menu {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #f2f2f2;
-    width: 50%;
-    height: 100%;
-    border-right: #ccc 1px solid;
-    opacity: 0.9;
-    padding: 30px;
-    transform: translateX(-500px);
-    transition: transform 0.5s ease-in-out;
-  }
-  .main-nav ul.main-menu li {
-    padding: 10px;
-    border-bottom: #ccc solid 1px;
-    font-size: 14px;
-  }
-  .main-nav ul.main-menu li:last-child {
-    border-bottom: 0;
-  }
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
 
-  .main-nav ul.main-menu.show {
-    transform: translateX(-20px);
+[class*="col-"] {
+  float: left;
+  padding: 15px;
+}
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {
+    width: 8.33%;
   }
-  .skills .Projects {
-    grid-template-columns: repeat(2, 1fr);
+  .col-2 {
+    width: 16.66%;
+  }
+  .col-3 {
+    width: 25%;
+  }
+  .col-4 {
+    width: 33.33%;
+  }
+  .col-5 {
+    width: 41.66%;
+  }
+  .col-6 {
+    width: 50%;
+  }
+  .col-7 {
+    width: 58.33%;
+  }
+  .col-8 {
+    width: 66.66%;
+  }
+  .col-9 {
+    width: 75%;
+  }
+  .col-10 {
+    width: 83.33%;
+  }
+  .col-11 {
+    width: 91.66%;
+  }
+  .col-12 {
     width: 100%;
   }
-  .xbox .content p {
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
     display: none;
   }
-  .xbox .content h2 {
-    margin-bottom: 20px;
+  .topnav a.icon {
+    float: right;
+    display: block;
   }
-  .carbon .content {
-    width: 85%;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
   }
-  .links .links-inner {
-    grid-template-columns: repeat(2, 1fr);
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .personalArticles {
+    display: flex;
   }
 }
 @media screen and (max-width: 480px) {
