--- a/Css/commentDashboard.css
+++ b/Css/commentDashboard.css
@@ -166,9 +166,22 @@ ul {
 .personalComment {
   display: flex;
   flex-direction: column;
-  background-color: hotpink;
+  flex-direction: column;
+  background-color: rgb(56, 54, 55);
   margin-right: 30px;
   margin-top: 50px;
+}
+.commentInfos {
+  display: flex;
+  margin-top: 20px;
+  text-align: center;
+  color: black;
+  background: darkgrey;
+  border: 1px solid black;
+  padding: 20px;
+  font-size: 10px;
+  width: 85%;
+  margin-left: 75px;
 }
 h1 {
   text-align: center;
@@ -224,9 +237,62 @@ button {
   background: grey;
   color: white;
 }
-@media screen and (min-width: 600px) {
+@media (max-width: 700px) {
+  .menu-btn {
+    display: block;
+  }
+  .menu-btn:hover {
+    opacity: 0.5;
+  }
+  .main-nav ul.right-menu {
+    margin-right: 50px;
+  }
+  .main-nav ul.main-menu {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #f2f2f2;
+    width: 50%;
+    height: 100%;
+    border-right: #ccc 1px solid;
+    opacity: 0.9;
+    padding: 30px;
+    transform: translateX(-500px);
+    transition: transform 0.5s ease-in-out;
+  }
+  .main-nav ul.main-menu li {
+    padding: 10px;
+    border-bottom: #ccc solid 1px;
+    font-size: 14px;
+  }
+  .main-nav ul.main-menu li:last-child {
+    border-bottom: 0;
+  }
+
+  .main-nav ul.main-menu.show {
+    transform: translateX(-20px);
+  }
+  .skills .Projects {
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+  }
+  .xbox .content p {
+    display: none;
+  }
+  .xbox .content h2 {
+    margin-bottom: 20px;
+  }
+  .carbon .content {
+    width: 85%;
+  }
+  .links .links-inner {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (min-width: 480px) {
   .side-nav {
-    width: 80px;
+    width: 120px;
   }
   .side-nav ul li {
     text-align: center;
@@ -238,10 +304,10 @@ button {
     font-size: 26px;
   }
   .main-content {
-    margin-left: 80px;
+    margin-left: 80ppx;
   }
 }
-@media screen and (min-width: 1000px) {
+@media screen and (min-width) {
   .side-nav {
     width: 200px;
   }
@@ -252,7 +318,7 @@ button {
     display: inline;
   }
   .side-nav ul li i {
-    font-size: 40px;
+    font-size: 16px;
   }
   .main-content {
     margin-left: 200px;
