--- a/Css/contact.css
+++ b/Css/contact.css
@@ -8,73 +8,57 @@
 }
 body {
   /* min-height: 100vh; */
-  background: rgb(235, 229, 229);
+  background: rgb(148, 125, 125);
   /* display: flex; */
   /* justify-content: center; */
   color: #000;
 }
-a {
-  color: #262626;
-  text-decoration: none;
-}
-ul {
-  list-style: none;
-}
+
 .container {
-  width: 90%;
+  /* width: 100%; */
   max-width: 1100px;
   margin: auto;
 }
-/*Nav*/
-.main-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 60px;
-  padding: 20px 0;
-  font-size: 13px;
+.topnav {
+  overflow: auto;
+  /* background-color: #333; */
+  width: 100%;
+  /* margin: 0 auto; */
 }
-.main-nav img {
-  width: 80px;
-  height: 40px;
+.topnav .container {
+  padding: 0 !important;
 }
-.main-nav ul {
-  display: flex;
+/* .topnav .logo {
+  width: 60px;
+  height: 30px;
+} */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
-.main-nav ul li {
-  padding: 0 10px;
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
 }
-.main-nav ul li a {
-  padding-bottom: 2px;
+
+.topnav a.active {
+  background-color: #4caf50;
+  color: white;
 }
-.main-nav ul li a:hover {
-  border-bottom: 2px solid #262626;
-}
-.main-nav ul.main-menu {
-  flex: 1;
-  margin-left: 20px;
-}
-.menu-btn {
-  cursor: pointer;
-  position: absolute;
-  top: 20px;
-  right: 30px;
-  z-index: 2;
+
+.topnav .icon {
   display: none;
 }
-.btn {
-  cursor: pointer;
-  display: inline-block;
-  border: 0;
-  font-weight: bold;
-  padding: 10px 20px;
-  background: #262626;
-  color: #fff;
-  font-size: 15px;
-}
-.btn:hover {
-  opacity: 0.9;
-}
+/* .topnav .logo {
+  width: 60px;
+  height: 30px;
+} */
 /* Showcae*/
 .showcase {
   width: 100%;
@@ -245,72 +229,32 @@ footer {
   color: white;
   border-top: #595959 solid 1px;
 }
-
-@media (max-width: 700px) {
-  .menu-btn {
-    display: block;
-  }
-  .menu-btn:hover {
-    opacity: 0.5;
-  }
-  .main-nav ul.right-menu {
-    margin-right: 50px;
-  }
-  .main-nav ul.main-menu {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #f2f2f2;
-    width: 50%;
-    height: 100%;
-    border-right: #ccc 1px solid;
-    opacity: 0.9;
-    padding: 30px;
-    transform: translateX(-500px);
-    transition: transform 0.5s ease-in-out;
-  }
-  .main-nav ul.main-menu li {
-    padding: 10px;
-    border-bottom: #ccc solid 1px;
-    font-size: 14px;
-  }
-  .main-nav ul.main-menu li:last-child {
-    border-bottom: 0;
-  }
-
-  .main-nav ul.main-menu.show {
-    transform: translateX(-20px);
-  }
-  .skills .Projects {
-    grid-template-columns: repeat(2, 1fr);
-    width: 100%;
-  }
-  .xbox .content p {
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
     display: none;
   }
-  .xbox .content h2 {
-    margin-bottom: 20px;
-  }
-  .carbon .content {
-    width: 85%;
-  }
-  .links .links-inner {
-    grid-template-columns: repeat(2, 1fr);
+  .topnav a.icon {
+    float: right;
+    display: block;
   }
 }
-@media (max-width: 500px) {
-  .skills .Projects {
-    width: 100%;
-    grid-template-columns: 1fr;
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
   }
-  .links .links-inner {
-    grid-template-columns: 1fr;
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
   }
-  .links .links-inner ul {
-    margin-bottom: 20px;
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
   }
 }
+
 @media screen and (max-width: 950px) {
   .contact-section {
     flex-direction: column;
@@ -326,30 +270,7 @@ footer {
     width: 100%;
   }
 }
-.alert-success {
-  z-index: 1;
-  background: #d4edd1;
-  font-size: 18px;
-  padding: 20px 40px;
-  min-width: 420px;
-  position: fixed;
-  right: 0;
-  top: 10px;
-  border-left: 8px solid #3ad66e;
-  border-radius: 4px;
-}
-.alert-error {
-  z-index: 1;
-  background: #fff3cd;
-  font-size: 18px;
-  padding: 20px 40px;
-  min-width: 420px;
-  position: fixed;
-  right: 0;
-  top: 10px;
-  border-left: 8px solid #ffa502;
-  border-radius: 4px;
-}
+
 /*responsive */
 @media (max-width: 800px) {
   .left-column,
