--- a/Css/index.css
+++ b/Css/index.css
@@ -7,73 +7,45 @@
 }
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background: #fff;
+  background: rgb(148, 125, 125);
   color: #000;
   font-size: 15px;
   line-height: 1.5;
 }
-a {
-  color: #262626;
-  text-decoration: none;
+.topnav {
+  overflow: hidden;
+  /* background-color: #333; */
 }
-ul {
-  list-style: none;
+/* .logo {
+  width: 60px;
+  height: 30px;
+} */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-.container {
-  width: 90%;
-  max-width: 1100px;
-  margin: auto;
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
 }
-/*Nav*/
-.main-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 60px;
-  padding: 20px 0;
-  font-size: 13px;
+
+.topnav a.active {
+  background-color: #4caf50;
+  color: white;
 }
-.main-nav img {
-  width: 80px;
-  height: 40px;
-}
-.main-nav ul {
-  display: flex;
-}
-.main-nav ul li {
-  padding: 0 10px;
-}
-.main-nav ul li a {
-  padding-bottom: 2px;
-}
-.main-nav ul li a:hover {
-  border-bottom: 2px solid #262626;
-}
-.main-nav ul.main-menu {
-  flex: 1;
-  margin-left: 20px;
-}
-.menu-btn {
-  cursor: pointer;
-  position: absolute;
-  top: 20px;
-  right: 30px;
-  z-index: 2;
+
+.topnav .icon {
   display: none;
 }
-.btn {
-  cursor: pointer;
-  display: inline-block;
-  border: 0;
-  font-weight: bold;
-  padding: 10px 20px;
-  background: #262626;
-  color: #fff;
-  font-size: 15px;
-}
-.btn:hover {
-  opacity: 0.9;
+.topnav .logo {
+  width: 60px;
+  height: 30px;
 }
 /* Showcae*/
 .showcase {
@@ -149,13 +121,6 @@ ul {
 .skills a:hover i {
   margin-left: 10px;
 }
-/* Work experience */
-/* .work {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 20px;
-} */
-/* Xbox */
 .xbox {
   width: 100%;
   height: 350px;
@@ -437,12 +402,6 @@ footer {
 .rog .descr ol li a {
   text-decoration: none;
 }
-/* 
-.skills {
-  width: 500px;
-  margin: 50px auto 0;
-  padding: 20px;
-} */
 
 .rog .lang {
   margin-top: 50px;
@@ -484,180 +443,64 @@ footer {
   color: white;
   border-top: #595959 solid 1px;
 }
-/* @media (max-width: 1024px) {
-  .menu-btn { */
-/* display: block; */
-/* display: flex;
-  }
-  .menu-btn:hover {
-    opacity: 0.5;
-  }
-  .main-nav ul.right-menu {
-    margin-right: 50px;
-  }
-  .main-nav ul.main-menu {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #f2f2f2;
-    width: 50%;
-    height: 100%;
-    border-right: #ccc 1px solid;
-    opacity: 0.9;
-    padding: 30px;
-    transform: translateX(-500px);
-    transition: transform 0.5s ease-in-out;
-  } */
-/* .main-nav ul.main-menu li {
-    padding: 10px;
-    border-bottom: #ccc solid 1px;
-    font-size: 14px;
-  }
-  .main-nav ul.main-menu li:last-child {
-    border-bottom: 0;
-  }
-
-  .main-nav ul.main-menu.show {
-    transform: translateX(-20px);
-  }
-  .skills {
-    grid-template-columns: repeat(2, 1fr);
-    width: 100%;
-  }
-  .xbox .content p {
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
     display: none;
-  } */
-/* .xbox .content h2 {
-    margin-bottom: 20px;
   }
-  .carbon .content {
-    width: 85%;
+  .topnav a.icon {
+    float: right;
+    display: block;
   }
-  .links .links-inner {
-    grid-template-columns: repeat(2, 1fr);
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
   }
-} */
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
 @media (max-width: 768px) {
-  .menu-btn {
-    display: block;
-  }
-  .menu-btn:hover {
-    opacity: 0.5;
-  }
-  .main-nav ul.right-menu {
-    margin-right: 50px;
-  }
-  .main-nav ul.main-menu {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #f2f2f2;
-    width: 50%;
-    height: 100%;
-    border-right: #ccc 1px solid;
-    opacity: 0.9;
-    padding: 30px;
-    transform: translateX(-500px);
-    transition: transform 0.5s ease-in-out;
-  }
-  .main-nav ul.main-menu li {
-    padding: 10px;
-    border-bottom: #ccc solid 1px;
-    font-size: 14px;
-  }
-  .main-nav ul.main-menu li:last-child {
-    border-bottom: 0;
-  }
-
-  .main-nav ul.main-menu.show {
-    transform: translateX(-20px);
-  }
   .skills {
     grid-template-columns: repeat(2, 1fr);
   }
+
   .xbox .content p {
     display: none;
   }
+
   .xbox .content h2 {
     margin-bottom: 20px;
   }
-  .content {
+
+  .carbon .content {
     width: 85%;
   }
-  .footer {
+
+  .links .links-inner {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-@media (max-width: 500px) {
+
+@media (max-width: 480px) {
   .skills {
     grid-template-columns: 1fr;
   }
-}
 
-/* @media screen and (max-width: 480px) {
-  .skill img {
-    width: 300;
-    grid-template-columns: 1fr;
-    display: flex;
-  }
   .links .links-inner {
     grid-template-columns: 1fr;
   }
+
   .links .links-inner ul {
     margin-bottom: 20px;
-  }
-} */
-@media screen and (max-width: 768px) {
-  .skill img {
-    width: 300px;
-    height: 300px;
-  }
-  .contact-section {
-    flex-direction: column;
-    /* flex: 50%; */
-  }
-  .contact-info,
-  .contact-form {
-    margin: 30px 50px;
-  }
-  .contact-form h2 {
-    font-size: 30px;
-  }
-  .contact-form .text-box {
-    width: 100%;
-  }
-}
-.alert-success {
-  z-index: 1;
-  background: #d4edd1;
-  font-size: 18px;
-  padding: 20px 40px;
-  min-width: 420px;
-  position: fixed;
-  right: 0;
-  top: 10px;
-  border-left: 8px solid #3ad66e;
-  border-radius: 4px;
-}
-.alert-error {
-  z-index: 1;
-  background: #fff3cd;
-  font-size: 18px;
-  padding: 20px 40px;
-  min-width: 420px;
-  position: fixed;
-  right: 0;
-  top: 10px;
-  border-left: 8px solid #ffa502;
-  border-radius: 4px;
-}
-/*responsive */
-@media (max-width: 480px) {
-  .left-column,
-  .right-column {
-    width: 100%;
-    padding: 0px;
   }
 }
