--- a/Css/login.css
+++ b/Css/login.css
@@ -6,85 +6,72 @@
   padding: 0;
 }
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background: url("../images/back1.jpg") no-repeat center center/cover;
-  color: #000;
-  font-size: 15px;
-  line-height: 1.5;
-  margin-top: 0;
-  padding-top: 0;
-  margin-bottom: 0;
-  padding-bottom: 0;
+  background: rgb(148, 125, 125);
 }
-a {
-  color: #262626;
-  text-decoration: none;
+.topnav {
+  overflow: hidden;
+  /* background-color: #333; */
 }
-ul {
-  list-style: none;
-}
-.container {
-  width: 90%;
-  max-width: 1100px;
-  margin: auto;
-}
-/*Nav*/
-.main-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 60px;
-  padding: 20px 0;
-  font-size: 13px;
-  color: #f1f1f1;
-}
-.main-nav.logo {
+/* .logo {
   width: 60px;
-  height: 100%;
-}
-.main-nav ul {
-  display: flex;
-  color: #fff;
-}
-.main-nav ul li {
-  padding: 0 10px;
-  color: #fff;
-}
-.main-nav ul li a {
-  padding-bottom: 2px;
-  color: #fff;
+  height: 30px;
+} */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-.main-nav ul li a:hover {
-  border-bottom: 2px solid #262626;
-  color: #fff;
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
 }
-.main-nav ul.main-menu {
-  flex: 1;
-  margin-left: 20px;
-  color: #fff;
+
+.topnav a.active {
+  background-color: #4caf50;
+  color: white;
 }
-.menu-btn {
-  cursor: pointer;
-  position: absolute;
-  top: 20px;
-  right: 30px;
-  z-index: 2;
-  color: rgb(12, 12, 12);
+
+.topnav .icon {
   display: none;
 }
-.btn {
-  cursor: pointer;
-  display: inline-block;
-  border: 0;
-  font-weight: bold;
-  padding: 10px 20px;
-  background: #262626;
-  color: #fff;
-  font-size: 15px;
+.topnav .logo {
+  width: 60px;
+  height: 30px;
 }
-.btn:hover {
-  opacity: 0.9;
+/* Showcae*/
+.showcase {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: flex-end;
+  padding-bottom: 50px;
+  margin-bottom: 30px;
+}
+.showcase h2,
+.showcase p {
+  margin-bottom: 10px;
+  color: #000;
+}
+.showcase img {
+  width: 300px;
+  border-radius: 50%;
+}
+.showcase .btn {
+  margin-top: 20px;
+}
+.dark {
+  color: #fff;
+}
+.dark.btn {
+  background: #f4f4f4;
+  color: #333;
 }
 /* Sign Up */
 .login {
@@ -133,15 +120,28 @@ ul {
   outline: none;
 }
 .signup-btn {
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
+    Helvetica, Arial, "Lucida Grande", sans-serif;
+  text-transform: uppercase;
+  font-size: 14px;
   color: #fff;
-  width: 100%;
-  padding: 10px;
-  border-radius: 20px;
-  font-size: 15px;
-  margin: 10px 0;
-  border: none;
-  outline: none;
-  cursor: pointer;
+  text-decoration: none;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-shadow: rgba(0, 0, 0, 0.3) 0 -1.25px 0;
+
+  /** Button Style **/
+  display: -moz-inline-stack;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  vertical-align: middle;
+  vertical-align: auto;
+  zoom: 1;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #13619f;
+  background: #2371b7;
+  padding: 11px 20px;
 }
 
 a {
@@ -234,42 +234,29 @@ footer {
 }
 
 /*responsive */
-@media (max-width: 800px) {
-  .menu-btn {
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
     display: block;
   }
-  .menu-btn:hover {
-    opacity: 0.5;
-  }
-  .main-nav ul.right-menu {
-    margin-right: 50px;
-  }
+}
 
-  .main-nav ul.main-menu {
-    display: block;
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive .icon {
     position: absolute;
+    right: 0;
     top: 0;
-    left: 0;
-    background: #f2f2f2;
-    width: 50%;
-    height: 100%;
-    border-right: #ccc 1px solid;
-    opacity: 0.9;
-    padding: 30px;
-    transform: translateX(-500px);
-    transition: transform 0.5s ease-in-out;
   }
-  .main-nav ul.main-menu li {
-    padding: 10px;
-    border-bottom: #ccc solid 1px;
-    font-size: 14px;
-  }
-  .main-nav ul.main-menu li:last-child {
-    border-bottom: 0;
-  }
-
-  .main-nav ul.main-menu.show {
-    transform: translateX(-20px);
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
   }
 }
 
