--- a/blog/blog.css
+++ b/blog/blog.css
@@ -7,7 +7,7 @@
 }
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background: rgb(148, 125, 125);
+  background: #fff;
   color: #000;
   font-size: 15px;
   line-height: 1.5;
@@ -20,14 +20,11 @@ body {
   overflow: hidden;
   /* background-color: #333; */
 }
-/* .logo {
-  width: 60px;
-  height: 30px;
-} */
+
 .topnav a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: #000;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -47,10 +44,10 @@ body {
 .topnav .icon {
   display: none;
 }
-.topnav .logo {
+/* .topnav .logo {
   width: 60px;
   height: 30px;
-}
+} */
 /* Showcae*/
 .showcase {
   width: 100%;
@@ -117,9 +114,15 @@ span {
   margin-right: 5px;
 }
 footer {
-  background-color: #333333;
+  /* background-color: #333333;
   padding: 20px;
-  margin-top: 20px;
+  margin-top: 20px; */
+  background-color: #333333;
+  padding-top: 10px;
+  padding-bottom: 0px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 .rog .descr ol li a {
@@ -258,7 +261,7 @@ footer {
     grid-template-columns: 1fr;
   }
   .links .links-inner ul {
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
   }
 }
 @media screen and (max-width: 768px) {
